<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_purple">

        <ImageView
            android:id="@+id/flash_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flash_logo" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/league_spartan_bold_font"
            android:text="@string/subtitle_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flash_logo" />

        <EditText
            android:id="@+id/enter_username_box"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/gradient_yellow"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_text" />

        <EditText
            android:id="@+id/enter_password_box"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/gradient_yellow"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_username_box" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/button_round_gradient_yellow"
            android:text="@string/button_login_text"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_password_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>